2007-03-09  Sven Neumann  <sven@gimp.org>

	* app/base/pixel-surround.c: replaced inner loop by a call to memcpy.

2007-03-09  Sven Neumann  <sven@gimp.org>

	* app/base/pixel-surround.c: fixed handling of uncovered regions.

2007-03-09  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_key_press):
	added missing call to gimp_rectangle_tool_update_options (). Fixes
	bug #416268.

2007-03-09  Raphaël Quinet  <raphael@gimp.org>

	* app/tools/gimpblendtool.c (gimp_blend_tool_push_status): make
	the new feature visible in the status bar (alas, this implies a
	new translatable string).

2007-03-08  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpblendtool.h (struct GimpBlendTool): renamed
	members and added last_x and last_y to remember the last mouse
	coords.

	* app/tools/gimpblendtool.c: changed accordingly. Take drawable
	offset into account in button_release() and remove offset
	calculations from all other places. Enabled using ALT for moving
	the entire line.

2007-03-08  Sven Neumann  <sven@gimp.org>

	* app/base/pixel-surround.c (pixel_surround_get_data): do one less
	call to tile_manager_get_tile().

2007-03-08  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpbucketfilltool.[ch]: request click events, removed
	target_x,y struct members and button_press() implementation and
	use the coords passed in button_release(). Also make sure that
	a click has no effect in areas where we show the bad corsor.

2007-03-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpfu.py: support mnemonics in parameter labels.

	* plug-ins/pygimp/plug-ins/foggify.py
	* plug-ins/pygimp/plug-ins/colorxhtml.py
	* plug-ins/pygimp/plug-ins/shadow_bevel.py
	* plug-ins/pygimp/plug-ins/palette-offset.py
	* plug-ins/pygimp/plug-ins/palette-sort.py: added mnemonics.

2007-03-08  Sven Neumann  <sven@gimp.org>

	* app/base/pixel-surround.c: fixed boundary case.

2007-03-08  Sven Neumann  <sven@gimp.org>
